--- a/Robot/TestMotor/TestMotor.csproj
+++ b/Robot/TestMotor/TestMotor.csproj
@@ -4,18 +4,19 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B35E2492-6D98-46D0-BB15-CD503CCF64AE}</ProjectGuid>
+    <ProjectGuid>{A0F44114-1CFE-406A-A555-AC1C50C00098}</ProjectGuid>
     <ProjectTypeGuids>{6AFDAB0D-95EF-424D-8A49-099ECD40B0FF};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RobotCtrl</RootNamespace>
-    <AssemblyName>RobotCtrl</AssemblyName>
+    <RootNamespace>TestMotor</RootNamespace>
+    <AssemblyName>TestMotor</AssemblyName>
     <TargetFrameworkIdentifier>WindowsEmbeddedCompact</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.9</TargetFrameworkVersion>
     <TargetFrameworkTargetsVersion>v8.0</TargetFrameworkTargetsVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,6 +26,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -38,36 +40,42 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants.cs" />
-    <Compile Include="Drive\Drive.cs" />
-    <Compile Include="Drive\DriveInfo.cs" />
-    <Compile Include="Drive\Track.cs" />
-    <Compile Include="Drive\TrackArcLeft.cs" />
-    <Compile Include="Drive\TrackArcRight.cs" />
-    <Compile Include="Drive\TrackLine.cs" />
-    <Compile Include="Drive\TrackTurn.cs" />
-    <Compile Include="Engine\DriveCtrl.cs" />
-    <Compile Include="Engine\MotorCtrl.cs" />
-    <Compile Include="Input\DigitalIn.cs" />
-    <Compile Include="Input\Switch.cs" />
-    <Compile Include="Input\SwitchEventArgs.cs" />
-    <Compile Include="IOPort.cs" />
-    <Compile Include="Output\DigitalOut.cs" />
-    <Compile Include="Output\Led.cs" />
-    <Compile Include="Output\LedEventArgs.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RobotConsole.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RobotIO\RobotIO.csproj">
-      <Project>{6F9F0048-8A3A-49BF-BE64-DF0CE1ECAE09}</Project>
-      <Name>RobotIO</Name>
+    <ProjectReference Include="..\RobotCtrl\RobotCtrl.csproj">
+      <Project>{B35E2492-6D98-46D0-BB15-CD503CCF64AE}</Project>
+      <Name>RobotCtrl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RobotView\RobotView.csproj">
+      <Project>{7A5F8348-2EAC-4939-AC9D-EC01D90979FD}</Project>
+      <Name>RobotView</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkTargetsVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
