--- a/Robot/RobotCtrl/RobotCtrl.csproj
+++ b/Robot/RobotCtrl/RobotCtrl.csproj
@@ -58,7 +58,9 @@
     <Compile Include="Output\DigitalOut.cs" />
     <Compile Include="Output\Led.cs" />
     <Compile Include="Output\LedEventArgs.cs" />
+    <Compile Include="PositionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Robot.cs" />
     <Compile Include="RobotConsole.cs" />
   </ItemGroup>
   <ItemGroup>
