--- a/Robot/RobotView/RobotView.csproj
+++ b/Robot/RobotView/RobotView.csproj
@@ -79,6 +79,12 @@
     <Compile Include="MotorCtrlView.designer.cs">
       <DependentUpon>MotorCtrlView.cs</DependentUpon>
     </Compile>
+    <Compile Include="NumericKeyBoard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NumericKeyBoard.designer.cs">
+      <DependentUpon>NumericKeyBoard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RadarView.cs">
       <SubType>UserControl</SubType>
@@ -141,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MotorCtrlView.resx">
       <DependentUpon>MotorCtrlView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NumericKeyBoard.resx">
+      <DependentUpon>NumericKeyBoard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RadarView.resx">
       <DependentUpon>RadarView.cs</DependentUpon>
