--- a/Robot/RobotCtrl/RobotCtrl.csproj
+++ b/Robot/RobotCtrl/RobotCtrl.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Output\LedEventArgs.cs" />
     <Compile Include="PositionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Radar\Radar.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="RobotConsole.cs" />
   </ItemGroup>
